--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 
   "require": {
     "php": ">=5.5",
-    "popov/zfc-simpler": "~0.1"
+    "popov/zfc-simpler": "dev-master"
   },
   "autoload": {
     "psr-4": {
