--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "agerecompany/zfc-data-grid",
+  "name": "popov/zfc-data-grid",
   "description": "Module for simple use and creating new Grid based on ZfcDatagrid",
   "type": "library",
   "license": "MIT",
@@ -11,8 +11,7 @@
   "authors": [
     {
       "name": "Sergiy Popov",
-      "email": "popow.sergiy@gmail.com",
-      "homepage": "http://agere.com.ua/",
+      "email": "popow.serhii@gmail.com",
       "role": "Developer"
     }
   ],
@@ -23,8 +22,8 @@
   },
   "autoload": {
     "psr-4": {
-      "Agere\\ZfcDataGrid\\": "src/",
-      "AgereTest\\ZfcDataGrid\\": "test/"
+      "Popov\\ZfcDataGrid\\": "src/",
+      "PopovTest\\ZfcDataGrid\\": "test/"
     }
   }
 }
