Expressive support has been added. Credential has been changed.

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "authors": [
     {
-      "name": "Sergiy Popov",
+      "name": "Serhii Popov",
       "email": "popow.serhii@gmail.com",
       "role": "Developer"
     }
